# sqlite-fsr

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  release.yml  rust.yml  unittests.yml
src/: command.rs  indexpage.rs  lib.rs  main.rs  record.rs  schema.rs  tablepage.rs
src/command/: dbinfo.rs  mod.rs  tables.rs
src/command/sql/: execute.rs  mod.rs  select.rs
src/command/sql/parser/: mod.rs  sql_statement.rs  sql_token.rs
src/models/: dbfile.rs  error.rs  indexpage.rs  mod.rs  record.rs  schema.rs  table.rs  tablepage.rs
src/models/dbfile/: dbfile.rs  mod.rs
src/models/dbfile/dbtable/: mod.rs  record.rs  table.rs  tablerow.rs
src/models/dbfile/dbtable/tablepage/: interiortablepage.rs  leaftablepage.rs  mod.rs  record.rs
src/models/dbfile/schema/: schemaraw.rs  schemarow.rs
src/models/schema/: mod.rs  schemaraw.rs  schemarow.rs
src/models/tablepage/: interiortablepage.rs  leaftablepage.rs  mod.rs
src/utils/: varint.rs
tests/: cli_test.rs  command_dbinfo_tests.rs  command_sql_tests.rs  command_table_tests.rs  lib_tests.rs  models_schema_tests.rs  sqlparser_tests.rs  tablerow_tests.rs
