[package]
name = "sqlite-fsr"
version = "0.1.0"
authors = ["fsr <hello@fsr.io>"]
edition = "2021"
rust-version = "1.80"
repository = "https://github.com/from-scratch-rust/sqlite-fsr"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A from-scratch Rust implementation of a minimal SQLite-like database."

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling
